--- a/index.html
+++ b/index.html
@@ -267,12 +267,7 @@
             <div class="col-12">
               <hr class="border border-dark border-2 opacity-100" />
               <h6>CONTADOR DE VISITIAS</h6>
-              <a href="https://info.flagcounter.com/ajAc"
-                ><img
-                  src="https://s11.flagcounter.com/count2/ajAc/bg_FFFFFF/txt_000000/border_CCCCCC/columns_3/maxflags_6/viewers_Visitas/labels_0/pageviews_0/flags_0/percent_0/"
-                  alt="Flag Counter"
-                  border="0"
-              /></a>
+              <a href="https://info.flagcounter.com/xATe"><img src="https://s01.flagcounter.com/count2/xATe/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_Visitas/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
             </div>
           </div>
         </aside>
