--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                               <a
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
-                                href="#"
+                                href="https://docs.google.com/document/d/1Lj_QAsiZ_hqdYrX5V19QgxgF-MBtSMhNdAbyNLhwjA4/edit?usp=sharing"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
@@ -292,7 +292,7 @@
                               <a
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
-                                href="#"
+                                href="https://docs.google.com/document/d/1Lj_QAsiZ_hqdYrX5V19QgxgF-MBtSMhNdAbyNLhwjA4/edit?usp=sharing"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
