--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
                               <a
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                 target="_blank"
                                 href="https://docs.google.com/document/d/19Bveqc3NKkTJARj6N8IQ6R5XQ1twR-qKYCCV5zfIzv8/edit?usp=sharing"
                               >
                                 <i
@@ -246,6 +247,7 @@
                               <a
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                 target="_blank"
                                 href="https://docs.google.com/document/d/1Lj_QAsiZ_hqdYrX5V19QgxgF-MBtSMhNdAbyNLhwjA4/edit?usp=sharing"
                               >
                                 <i
@@ -269,6 +271,7 @@
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
                                 href="https://docs.google.com/document/d/19Bveqc3NKkTJARj6N8IQ6R5XQ1twR-qKYCCV5zfIzv8/edit?usp=sharing"
+                                target="_blank"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
@@ -292,7 +295,7 @@
                               <a
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
-                                href="https://docs.google.com/document/d/1Lj_QAsiZ_hqdYrX5V19QgxgF-MBtSMhNdAbyNLhwjA4/edit?usp=sharing"
+                                href="https://docs.google.com/document/d/1Lj_QAsiZ_hqdYrX5V19QgxgF-MBtSMhNdAbyNLhwjA4/edit?usp=sharing"  target="_blank"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
