--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
                               <a
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
-                                href="#"
+                                target="_blank"
+                                href="https://docs.google.com/document/d/1WhnTaOupwEtW_KsooL0qRFbviDj14zhW/edit?usp=sharing&ouid=110596410194594946977&rtpof=true&sd=true"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
@@ -283,7 +284,8 @@
                               <a
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
-                                href="#"
+                                href="https://docs.google.com/document/d/1u_XKBaFbOwNvDlaWY58m8R6zLx_UBpH7/edit?usp=sharing&ouid=110596410194594946977&rtpof=true&sd=true"
+                                target="_blank"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
