--- a/index.html
+++ b/index.html
@@ -223,13 +223,13 @@
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
                                  target="_blank"
-                                href="https://docs.google.com/document/d/19Bveqc3NKkTJARj6N8IQ6R5XQ1twR-qKYCCV5zfIzv8/edit?usp=sharing"
+                                href="https://docs.google.com/document/d/1NcBgv7cILrtMA4dd12nQjHCuB543s7z4lyGkLEcXz3s/edit?usp=sharing"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
                                   aria-hidden="true"
                                 ></i>
-                                Anicama Espinoza Nicolas Leonardo - Tesis
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
                               </a>
                               <hr />
                               <a
@@ -244,19 +244,7 @@
                                 ></i>
                                 Chunga Vargas Manuel Alberto - Tesis
                               </a>
-                              <hr />
-                              <a
-                                class="icon-link icon-link-hover"
-                                style="--bs-link-hover-color-rgb: 25, 135, 84"
-                                 target="_blank"
-                                href="https://docs.google.com/document/d/1Lj_QAsiZ_hqdYrX5V19QgxgF-MBtSMhNdAbyNLhwjA4/edit?usp=sharing"
-                              >
-                                <i
-                                  class="bi bi-file-earmark-word"
-                                  aria-hidden="true"
-                                ></i>
-                                Vilca Velasquez Javier Alberto - Tesis
-                              </a>
+
                             </li>
                           </ul>
                         </td>
@@ -271,14 +259,14 @@
                               <a
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
-                                href="https://docs.google.com/document/d/19Bveqc3NKkTJARj6N8IQ6R5XQ1twR-qKYCCV5zfIzv8/edit?usp=sharing"
-                                target="_blank"
+                                 target="_blank"
+                                href="https://docs.google.com/document/d/1NcBgv7cILrtMA4dd12nQjHCuB543s7z4lyGkLEcXz3s/edit?usp=sharing"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
                                   aria-hidden="true"
                                 ></i>
-                                Anicama Espinoza Nicolas Leonardo - Tesis
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
                               </a>
                               <hr />
                               <a
@@ -292,18 +280,6 @@
                                   aria-hidden="true"
                                 ></i>
                                 Chunga Vargas Manuel Alberto - Tesis
-                              </a>
-                              <hr />
-                              <a
-                                class="icon-link icon-link-hover"
-                                style="--bs-link-hover-color-rgb: 25, 135, 84"
-                                href="https://docs.google.com/document/d/1Lj_QAsiZ_hqdYrX5V19QgxgF-MBtSMhNdAbyNLhwjA4/edit?usp=sharing"  target="_blank"
-                              >
-                                <i
-                                  class="bi bi-file-earmark-word"
-                                  aria-hidden="true"
-                                ></i>
-                                Vilca Velasquez Javier Alberto - Tesis
                               </a>
                             </li>
                           </ul>
