--- a/index.html
+++ b/index.html
@@ -290,7 +290,37 @@
                       <tr>
                         <th scope="row">3</th>
                         <td>Diseño de componentes. </td>
-                        <td>-----</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                 target="_blank"
+                                href="#"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/18u0qS8M-k-QKVz3UryX7K3w6YNWjzv6h/edit?usp=sharing&ouid=110596410194594946977&rtpof=true&sd=true"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
                         <td>-----</td>
                       </tr>
                     </tbody>
