--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
                                  target="_blank"
-                                href="#"
+                                href="https://docs.google.com/document/d/1LHhM6z14VWRcRZp0kRm1IXopz48gLSTAi-nOKNjsKxk/edit?usp=sharing"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
