--- a/index.html
+++ b/index.html
@@ -284,8 +284,36 @@
                             </li>
                           </ul>
                         </td>
-                        <td>----</td>     
-                        
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+<!--                               <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                 target="_blank"
+                                href="https://docs.google.com/document/d/1LHhM6z14VWRcRZp0kRm1IXopz48gLSTAi-nOKNjsKxk/edit?usp=sharing"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a> -->
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1a3YzIddSfj9GHY3CdWF9QpLRi-jGicZatghXU6A2VDQ/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Observaciones
+                              </a>
+                            </li>
+                        </td>     
                       </tr>
                       <tr>
                         <th scope="row">3</th>
@@ -310,6 +338,71 @@
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
                                 href="https://docs.google.com/document/d/18u0qS8M-k-QKVz3UryX7K3w6YNWjzv6h/edit?usp=sharing&ouid=110596410194594946977&rtpof=true&sd=true"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+<!--                               <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                 target="_blank"
+                                href="https://docs.google.com/document/d/1LHhM6z14VWRcRZp0kRm1IXopz48gLSTAi-nOKNjsKxk/edit?usp=sharing"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a> -->
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1BY3tlxOuFcK855dNR4LhgIvG1-t0AOUcvt2RGW7Gko8/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Observaciones
+                              </a>
+                            </li>
+                        </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">4</th>
+                        <td>Evaluación final del Aporte Conceptual El artefacto: requisitos, arquitectura, diseño de la BD, tecnologías y herramientas. La Planificación: actividades(componentes, dominio, procesos, interfaces), y cronograma.</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="#"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1yPRUIERx4M6QSLdxyF9yNs3Tu_i-vf6n/edit?usp=sharing&ouid=110596410194594946977&rtpof=true&sd=true"
                                 target="_blank"
                               >
                                 <i
