--- a/index.html
+++ b/index.html
@@ -299,6 +299,18 @@
                                 ></i>
                                 Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
                               </a> -->
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1t5WdnMn3k5emRjyQQAxhv6Ja-h6VvEBfnDzSdO4ZIzM/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Nicolas y Vilca Javier - Observaciones
+                              </a>
                               <hr />
                               <a
                                 class="icon-link icon-link-hover"
@@ -364,6 +376,18 @@
                                 ></i>
                                 Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
                               </a> -->
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1t5WdnMn3k5emRjyQQAxhv6Ja-h6VvEBfnDzSdO4ZIzM/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Nicolas y Vilca Javier - Observaciones
+                              </a>
                               <hr />
                               <a
                                 class="icon-link icon-link-hover"
@@ -390,7 +414,7 @@
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
                                 target="_blank"
-                                href="#"
+                                href="https://docs.google.com/document/d/1ubZZGdtERn7EDfuMsqddDnP5BjaGj6lOQjgxYLNcnXI/edit?usp=sharing"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
