--- a/index.html
+++ b/index.html
@@ -204,7 +204,319 @@
               </li>
               <li class="my-2">
                 <span class="fw-bold">CONTENIDO SEMANAL</span>
-                <div class="overflow-x-auto"></div>
+                                <div class="overflow-x-auto">
+                  <table class="table table-striped my-3 text-center">
+                    <thead class="table-dark">
+                      <tr>
+                        <th scope="col">SEMANA</th>
+                        <th scope="col">TEMAS</th>
+                        <th scope="col">TAREAS</th>
+                        <th scope="col">OBSERVACIONES</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>El aporte: concepto, características y proceso.</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                 target="_blank"
+                                href="https://docs.google.com/document/d/1NcBgv7cILrtMA4dd12nQjHCuB543s7z4lyGkLEcXz3s/edit?usp=sharing"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="https://docs.google.com/document/d/1WhnTaOupwEtW_KsooL0qRFbviDj14zhW/edit?usp=sharing&ouid=110596410194594946977&rtpof=true&sd=true"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
+                              </a>
+
+                            </li>
+                          </ul>
+                        </td>
+                        <td>----</td>                        
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Bosquejo del aporte</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                 target="_blank"
+                                href="https://docs.google.com/document/d/1NcBgv7cILrtMA4dd12nQjHCuB543s7z4lyGkLEcXz3s/edit?usp=sharing"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/17uRqu8e220Uy3TWp2y7SEmD1wBcPsint/edit?usp=sharing&ouid=110596410194594946977&rtpof=true&sd=true"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+<!--                               <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                 target="_blank"
+                                href="https://docs.google.com/document/d/1LHhM6z14VWRcRZp0kRm1IXopz48gLSTAi-nOKNjsKxk/edit?usp=sharing"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a> -->
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1t5WdnMn3k5emRjyQQAxhv6Ja-h6VvEBfnDzSdO4ZIzM/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Nicolas y Vilca Javier - Observaciones
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1a3YzIddSfj9GHY3CdWF9QpLRi-jGicZatghXU6A2VDQ/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Observaciones
+                              </a>
+                            </li>
+                        </td>     
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>Diseño de componentes. </td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                 target="_blank"
+                                href="https://docs.google.com/document/d/1LHhM6z14VWRcRZp0kRm1IXopz48gLSTAi-nOKNjsKxk/edit?usp=sharing"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/18u0qS8M-k-QKVz3UryX7K3w6YNWjzv6h/edit?usp=sharing&ouid=110596410194594946977&rtpof=true&sd=true"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+<!--                               <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                 target="_blank"
+                                href="https://docs.google.com/document/d/1LHhM6z14VWRcRZp0kRm1IXopz48gLSTAi-nOKNjsKxk/edit?usp=sharing"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a> -->
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1t5WdnMn3k5emRjyQQAxhv6Ja-h6VvEBfnDzSdO4ZIzM/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Nicolas y Vilca Javier - Observaciones
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1BY3tlxOuFcK855dNR4LhgIvG1-t0AOUcvt2RGW7Gko8/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Observaciones
+                              </a>
+                            </li>
+                        </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">4</th>
+                        <td>Evaluación final del Aporte Conceptual El artefacto: requisitos, arquitectura, diseño de la BD, tecnologías y herramientas. La Planificación: actividades(componentes, dominio, procesos, interfaces), y cronograma.</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="https://docs.google.com/document/d/1ubZZGdtERn7EDfuMsqddDnP5BjaGj6lOQjgxYLNcnXI/edit?usp=sharing"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1yPRUIERx4M6QSLdxyF9yNs3Tu_i-vf6n/edit?usp=sharing&ouid=110596410194594946977&rtpof=true&sd=true"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
+                        <td>-----</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">5</th>
+                        <td>Diseño de Procesos. Diseño de interfaces. Dominio de tecnología y herramientas.</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="#"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1vtnb7_5WDnbBo5G769DAYLJ4EVlF-ike/edit?usp=sharing&ouid=110596410194594946977&rtpof=true&sd=true"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
+                        <td>-----</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">6</th>
+                        <td>Desarrollo de componentes core.</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="#"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1vtnb7_5WDnbBo5G769DAYLJ4EVlF-ike/edit?usp=sharing&ouid=110596410194594946977&rtpof=true&sd=true"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
+                        <td>-----</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </li>
             </ol>
           </section>
