--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
                                 target="_blank"
-                                href="#"
+                                href="https://docs.google.com/document/d/1z6XZCHIEJwqFf_uKas9DOeHp0GxLjumRmNOVQtqYats/edit?usp=sharing"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
